--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
     "name": "@sravanthbaratam/gpi",
-    "version": "1.0.0"
+    "version": "1.0.1",
+    "license": "MIT",
+    "dependencies": {
+        "jssoup": "0.0.12",
+        "node-fetch": "^2.6.1"
     }
+}
