--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
     "name": "@sravanthbaratam/gpi",
-    "version": "1.0.1",
+    "version": "1.1.1",
+    "description": "Gets all the current prices of gold in various cities in India.",
+    "main": "index.js",
+    "keywords": [
+        "gpi",
+        "npm",
+        "package",
+        "sravanthbaratam"
+    ],
+    "repository": "sravanthbaratam/gpi",
     "license": "MIT",
     "dependencies": {
         "jssoup": "0.0.12",
